--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
@@ -40,5 +41,16 @@
   },
   "devDependencies": {
     "gh-pages": "^3.2.3"
+  },
+  "description": "Project for Stupeni Uspeha &amp; Center Invest Bank",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/velikoss/stupeni-bank.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/velikoss/stupeni-bank/issues"
   }
 }
